--- a/front-end/assets/index.html
+++ b/front-end/assets/index.html
@@ -16,9 +16,12 @@
               <span class="navbar">
                 <span class="hamburger fas fa-bars"></span> 
                 <h1> Moody </h1>
-                
+                <br>
                </span>
-
+               <button class="btn">
+                    <i class="fas fa-calendar-day"></i> Add Day
+               </button>
+               <iframe width="700" height="300" frameborder="0" scrolling="no" src="http://plot.ly/~peytonrunyan/106.embed"></iframe>
            </div>
 
        <div class="box box1">
