changed to allcaps

--- a/front-end/assets/index.html
+++ b/front-end/assets/index.html
@@ -27,7 +27,7 @@
        <div class="box box1">
           <span class="form-text">How do you feel today?</span>
           <form>
-              <span class="mood far fa-sad-cry" id="angry"></span>
+              <span class="mood fas fa-sad-cry" id="angry"></span>
               <span class="mood far fa-frown" id="sad"></span>
               <span class="mood far fa-meh-blank" id="neutral"></span>
               <span class="mood far fa-smile" id="happy"></span>
